--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <h1>Professional Drone Services for Oklahoma City</h1>
             <p>Aerial Photography | Site Documentation | Event Coverage</p>
             <div class="hero-tagline">A Veteran's Eye in the Sky</div>
-            <div class="veteran-badge">🇺🇸 Veteran-Owned & Operated</div>
+            <div class="veteran-badge"> Veteran-Owned & Operated</div>
             <br><br>
             <a href="#contact" class="cta-button">Get a Free Quote</a>
         </div>
