--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         
         <div class="tech-specs">
             <h3>📱 Professional Equipment & Capabilities</h3>
-            <p>We use the DJI Mavic 4 Pro - professional-grade technology delivering exceptional results:</p>
+            <p>Professional-grade technology delivering exceptional results:</p>
             <div class="spec-list">
                 <div class="spec-item">20MP High-Resolution Photos</div>
                 <div class="spec-item">4K Video at 60fps</div>
@@ -537,7 +537,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 RKM Drone Services LLC | A Veteran's Eye in the Sky | Oklahoma City, OK</p>
+        <p>&copy; 2025 RKM Drone Services LLC | A Veteran's Eye in the Sky | Oklahoma City, OK</p>
         <p style="margin-top: 1rem; font-size: 0.9rem;">Licensed & Insured | FAA Part 107 Certified | CAGE Code: 170S4 | UEI: CGS7HZK3S3P9</p>
     </footer>
 </body>
