--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
       color:var(--text);
       background:
-        radial-gradient(1200px 700px at 15% 0%, rgba(124,92,255,.28), transparent 55%),
+        radial-gradient(1200px 700px at 15% 0%, rgba(124,92,255,.28), transparent 15%),
         radial-gradient(900px 600px at 90% 10%, rgba(45,212,191,.18), transparent 60%),
         linear-gradient(180deg, #070b14 0%, var(--bg) 40%, #070b14 100%);
       line-height:1.35;
@@ -563,7 +563,7 @@
         <div class="card">
           <div class="panel">
             <h3>Quote form</h3>
-            <p>Fill out the form below and we'll get back to you within 24 hours.</p>
+            <p>Fill out the form below and we'll get back to shortly.</p>
 
             <form id="quoteForm">
               <div class="formRow">
