--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </div>
 
             <div style="display:flex; gap:10px; margin-top:14px; flex-wrap:wrap">
-              <a class="btn btnPrimary" href="#contact">Request quote > Currently Under Construction. Please use direct contact. </a>
+              <a class="btn btnPrimary" href="#contact">Request quote > </a>
               <a class="btn" href="mailto:contact@rkmdroneservices.com">Email</a>
             </div>
 
@@ -607,7 +607,7 @@
                 <textarea id="details" name="details" placeholder="Timeline, acreage, listing price, goals, any constraints..."></textarea>
               </div>
 
-              <button class="btn btnPrimary" type="submit">Send request</button>
+              <button class="btn btnPrimary" type="submit">Currently Under Construction. Please use direct contact.</button>
               <div id="formMsg" class="fine" role="status" aria-live="polite"></div>
             </form>
           </div>
