--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RKM Drone Services | Aerial Photos, Video, Mapping</title>
-  <meta name="description" content="Fast-turnaround drone media for real estate, construction, and land in the Oklahoma City metro. Photos, video, mapping, and inspections." />
+  <meta name="description" content="Fast-turnaround drone media for real estate, construction, and land in and around the Oklahoma City area. Photos, video, mapping, and inspections." />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph -->
@@ -292,7 +292,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <div style="font-size:14px; opacity:.95;">RKM Drone Services</div>
-          <div style="font-size:12px; color:var(--muted); font-weight:700;">OKC Metro • Photos • Video • Mapping</div>
+          <div style="font-size:12px; color:var(--muted); font-weight:700;">OKLAHOMA CITY, OK</div>
         </div>
       </div>
 
